# kafka-test

./: .env  Cargo.toml  Dockerfile  docker-compose-zookeeper.yml  docker-compose.yml
.docker/: Dockerfile  docker-entrypoint.sh
.docker/config/: server.properties
src/: error.rs  event.rs  kafka.rs  main.rs  runtime.rs  setup.rs
src/kafka/: consumer.rs  handler.rs  producer.rs
