[package]
name = "kafka-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "^0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "*", features = ["serde", "v4"] }

error-stack = "0.4"

rdkafka = { version = "0.35.0", features = ["cmake-build", "tracing", "tokio"] }

dotenvy = "^0.15"